--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\202501210514368_InitDB.Designer.cs">
       <DependentUpon>202501210514368_InitDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501210636544_updated.cs" />
+    <Compile Include="Migrations\202501210636544_updated.Designer.cs">
+      <DependentUpon>202501210636544_updated.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\Repo.cs" />
@@ -74,6 +78,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202501210514368_InitDB.resx">
       <DependentUpon>202501210514368_InitDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501210636544_updated.resx">
+      <DependentUpon>202501210636544_updated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
