--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -45,8 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DTOs\PackingItemDTO.cs" />
+    <Compile Include="DTOs\TokenDTO.cs" />
     <Compile Include="DTOs\TripDTO.cs" />
+    <Compile Include="DTOs\UserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AuthService.cs" />
+    <Compile Include="Services\PackingItemService.cs" />
     <Compile Include="Services\TripService.cs" />
   </ItemGroup>
   <ItemGroup>
