--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -53,9 +53,14 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DataAccessFactory.cs" />
+    <Compile Include="EF\Tables\PackingItem.cs" />
+    <Compile Include="EF\Tables\Token.cs" />
     <Compile Include="EF\Tables\Trip.cs" />
     <Compile Include="EF\Tables\User.cs" />
     <Compile Include="EF\TPContext.cs" />
+    <Compile Include="Interfaces\IAuth.cs" />
+    <Compile Include="Interfaces\IBudget.cs" />
+    <Compile Include="Interfaces\IPackingItem.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202501210514368_InitDB.cs" />
     <Compile Include="Migrations\202501210514368_InitDB.Designer.cs">
@@ -65,10 +70,25 @@
     <Compile Include="Migrations\202501210636544_updated.Designer.cs">
       <DependentUpon>202501210636544_updated.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501211459456_Table.cs" />
+    <Compile Include="Migrations\202501211459456_Table.Designer.cs">
+      <DependentUpon>202501211459456_Table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501211602375_UserTableAdded.cs" />
+    <Compile Include="Migrations\202501211602375_UserTableAdded.Designer.cs">
+      <DependentUpon>202501211602375_UserTableAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501211624031_UpdateTable.cs" />
+    <Compile Include="Migrations\202501211624031_UpdateTable.Designer.cs">
+      <DependentUpon>202501211624031_UpdateTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repos\PackingRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
+    <Compile Include="Repos\TokenRepo.cs" />
     <Compile Include="Repos\TripRepo.cs" />
+    <Compile Include="Repos\UserRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -81,6 +101,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501210636544_updated.resx">
       <DependentUpon>202501210636544_updated.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501211459456_Table.resx">
+      <DependentUpon>202501211459456_Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501211602375_UserTableAdded.resx">
+      <DependentUpon>202501211602375_UserTableAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501211624031_UpdateTable.resx">
+      <DependentUpon>202501211624031_UpdateTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
